--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -2,8 +2,16 @@
   "robotWidth": 0.9,
   "robotLength": 0.9,
   "holonomicMode": true,
-  "pathFolders": [],
-  "autoFolders": [],
+  "pathFolders": [
+    "Middle",
+    "Bottom",
+    "Top"
+  ],
+  "autoFolders": [
+    "Amp",
+    "Middle",
+    "Source"
+  ],
   "defaultMaxVel": 3.0,
   "defaultMaxAccel": 3.0,
   "defaultMaxAngVel": 180.0,
