--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -3,8 +3,9 @@
   "robotLength": 0.9,
   "holonomicMode": true,
   "pathFolders": [
-    "Middle",
     "Bottom",
+    "Middle",
+    "Testing",
     "Top"
   ],
   "autoFolders": [
